--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "app": "node app.js",
     "sum": "node operation/sum.js",
     "sub": "node operation/basic/sub.js",
-    "mul": "node operation/mul.js"
+    "mul": "node mul.js"
   },
   "keywords": [],
   "author": "Jenny",
