--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "hola",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app": "node app.js",
+    "sum": "node opeartions/sum.js",
+    "sub": "node opeartions/basic/sub.js",
+    "mult": "node opeartions/mult.js",
+    "variables": "node intro/variables.js",
+    "operadores": "node intro/operadores.js"
+    
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
